--- a/memorygame/src/App.css
+++ b/memorygame/src/App.css
@@ -62,3 +62,26 @@
   float: right;
   background-color: rgb(84, 80, 88);
 }
+.Card-Div
+{
+  width: 100%;
+  height: 100%
+}
+.img-container
+{
+  max-width: 100%;
+  max-height: 100%;
+}
+.Cards-Container
+{
+  width: 100%;
+  height: 70%;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  
+}
+img{
+  max-width: 80%;
+  max-height: 60%;
+}
